--- a/tp2/CodeInitial/assets/css/style.css
+++ b/tp2/CodeInitial/assets/css/style.css
@@ -2,7 +2,7 @@ body{
     max-width: 1200px;
     padding-left: 20px;
     padding-right: 20px;
-    font-style: arial;
+    font-family: arial;
     color: black;
 }
 header{
@@ -12,4 +12,29 @@ header{
 }
 footer{
     max-height: 70px;
+}
+#homepage_img{
+    float: right;
+    width: 50%;
+    height: 50%;
+}
+.btn {
+    background-color: #14597f;
+    border: #0b2d3d;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    text-decoration: solid;
+    color: white;
+    padding: 10px;
+
+}
+.btn:hover {
+    background-color: #1fb5e9;
+    text-decoration: none;
+    transition-timing-function: ease-out;
+    transition: background-color 0.2s, text-decoration 0.2s;
+}
+#index_important_text {
+    font-weight: bold;
 }
