--- a/tp2/CodeInitial/assets/css/style.css
+++ b/tp2/CodeInitial/assets/css/style.css
@@ -27,7 +27,9 @@ footer{
 }
 .btn {
     background-color: #14597f;
-    border: #0b2d3d 1px solid;
+    border: #0b2d3d;
+    border-style: solid;
+    border-width: 1px;
     border-radius: 4px;
     text-decoration: solid;
     color: white;
@@ -63,9 +65,11 @@ footer{
     cursor: pointer;
     padding: 18px 10px 18px 10px;
     width: 100%;
-    background-color: white;
     box-sizing: border-box;
     display: block;
+}
+#lateral_bar button:not(.selected) {
+    background-color: white;
 }
 #lateral_bar button:hover {
     background-color: #f3f3f3;
