--- a/tp2/CodeInitial/assets/css/style.css
+++ b/tp2/CodeInitial/assets/css/style.css
@@ -58,19 +58,37 @@ footer{
     float: right;
 }
 #lateral_bar button {
-    border: 1px solid #999999;
-    border-radius: 4px;
     text-align: left;
     cursor: pointer;
     padding: 18px 10px 18px 10px;
     width: 100%;
-    box-sizing: border-box;
     display: block;
+}
+#lateral_bar button, #productslist article {
+    border: 1px solid #999999;
+    border-radius: 4px;
+}
+#productslist{
+    clear: both;
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    justify-content: space-between;
+  align-content: space-between;
+    
+}
+#productslist article {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+#productslist article img {
+        max-width: 100%;
+        max-height: 100%;
 }
 #lateral_bar button:not(.selected) {
     background-color: white;
 }
-#lateral_bar button:hover {
+#lateral_bar button:hover, #productslist article :hover {
     background-color: #f3f3f3;
     transition-timing-function: ease-out;
     transition: background-color 0.2s;
@@ -89,5 +107,5 @@ footer{
 }
 #page_title {
     float: left;
-    box-sizing: border-box;
 }
+
