--- a/tp2/OnlineShop/assets/css/style.css
+++ b/tp2/OnlineShop/assets/css/style.css
@@ -96,5 +96,118 @@ footer > div {
     align-items: center;
 }
 
-
+	/* homepage*/
+#homepage_img{
+    float: right;
+    width: 50%;
+    height: 50%;
+}
+.btn {
+    background-color: #14597f;
+    border: #0b2d3d;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    text-decoration: solid;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+}
+.btn:hover {
+    background-color: #1fb5e9;
+    text-decoration: none;
+    transition-timing-function: ease-out;
+    transition: background-color 0.2s, text-decoration 0.2s;
+}
+#index_important_text {
+    font-weight: bold;
+}
+/* products */
+#lateral_bar{
+    width: 25%;
+    float:left;
+    box-sizing: border-box;
+    padding: 15px;
+}
+#main_panel{
+    width:75%;
+    float: right;
+}
+#lateral_bar button {
+    text-align: left;
+    cursor: pointer;
+    padding: 18px 10px 18px 10px;
+    width: 100%;
+    display: block;
+}
+#lateral_bar button, #productslist article, .form-control {
+    border: 1px solid #999999;
+    border-radius: 4px;
+}
+#productslist{
+    clear: both;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: space-between;
+  align-content: space-between;
+    
+}
+#productslist article {
+    margin: 15px;
+}
+#productslist article img {
+        max-width: 100%;
+        max-height: 100%;
+}
+#lateral_bar button:not(.selected) {
+    background-color: white;
+}
+#lateral_bar button:hover, #productslist :hover {
+    background-color: #f3f3f3;
+    transition-timing-function: ease-out;
+    transition: background-color 0.2s;
+}
+#lateral_bar button:not(:last-child) {
+    border-bottom: none;
+  }
+.selected {
+    background-color: #ddf2fb;
+}
+/*panneau central*/
+#num_products {
+    float: right;
+    box-sizing: border-box;
+    
+}
+#page_title {
+    float: left;
+}
+.product_price {
+    padding: 5px;
+    text-align: right;
+}
+/*page d'un produit*/
+.table {
+    display: grid;
+    grid-template-columns: auto auto;
+    column-count: 2;
+}
+.product_img {
+    max-width: 100%;
+    max-height: 100%;
+}
+#form_quantity {
+    justify-self: end;
+}
+#price{
+    margin: 10px;
+}
+#product_info{
+    grid-column: 2;
+}
+#dotted_line {
+    border:none;
+    border-top:1px dotted #999999;
+    height:1px;
+}
 
