--- a/tp2/OnlineShop/assets/css/style.css
+++ b/tp2/OnlineShop/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
     margin:0px;
-    font-style: arial;
+    font-family: Arial, sans-serif;
 }
 
 main{
@@ -27,10 +27,6 @@ header > div {
     align-items: center;
 }
 
-footer{
-    max-height: 70px;
-}
-
 .header_nav{
     max-width: 1200px;
     justify-content: right;
@@ -53,8 +49,21 @@ footer{
     border-radius: 4px;
 }
 
+.header_nav a:hover:not(.active):not(.shopping-cart) {
+    background-color: rgba(31, 181, 233, 0.3);
+    border-radius: 4px;
+}
+
+
 .fa-shopping-cart {
     color: #14597f;
+}
+
+.fa-shopping-cart:hover{
+    color: rgba(31, 181, 233, 0.7);
+}
+.fa-shopping-cart.active{
+    color:#1fb5e9;
 }
   
 .shopping-cart {
@@ -87,16 +96,17 @@ footer{
     background-color: #eeeeee;
     border-top: 1px solid #cccccc;
     color: black;
-}
-footer > div {
-    max-width: 1200px;
     display: flex;
     margin: auto;
     justify-content: center;
     align-items: center;
 }
 
-	/* homepage*/
+footer > div {
+    max-width: 1200px;
+}
+
+/* homepage*/
 #homepage_img{
     float: right;
     width: 50%;
@@ -133,14 +143,30 @@ footer > div {
     width:75%;
     float: right;
 }
+
 #lateral_bar button {
     text-align: left;
     cursor: pointer;
-    padding: 18px 10px 18px 10px;
+    padding: 10px 10px 10px 10px;
     width: 100%;
     display: block;
+    border: 1px solid #999999;
 }
-#lateral_bar button, #productslist article, .form-control {
+#lateral_bar button:not(:last-child) {
+    border-bottom: none;
+}
+  
+#lateral_bar button:last-child {
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+  
+#lateral_bar button:first-child {
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+}
+
+#productslist article, .form-control {
     border: 1px solid #999999;
     border-radius: 4px;
 }
@@ -149,15 +175,15 @@ footer > div {
     display: grid;
     grid-template-columns: auto auto auto;
     justify-content: space-between;
-  align-content: space-between;
+    align-content: space-between;
     
 }
 #productslist article {
     margin: 15px;
 }
 #productslist article img {
-        max-width: 100%;
-        max-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 #lateral_bar button:not(.selected) {
     background-color: white;
@@ -211,3 +237,176 @@ footer > div {
     height:1px;
 }
 
+/*page d'un contact*/
+
+.contact-grid {
+    display: grid;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    margin: 30px 5px;
+    padding: 30px 0px 10px 0px;
+    border: 1px solid  #999999;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+.contact-grid > section{
+    padding-top:20px;
+}
+
+.contact-grid i{
+    text-align: center;
+    display: block;
+    font-size: 50px;
+}
+  
+.contact-grid a{
+    text-align: center;
+    display: block;
+    text-decoration: none;
+    margin: 10px 0px;
+}
+  
+.contact-grid p{
+    text-align: center;
+    display: block;
+}
+
+.contact-card a{
+    text-decoration: none;
+    color:#14597f;
+}
+
+.contact-card a:visited{
+    text-decoration: none;
+    color:#14597f;
+}
+
+/*Page Shopping Cart Panier*/
+.cart-table{
+    -width:100%;
+    text-align: left;
+    display:flex;
+    flex-direction: column;
+    border-collapse: collapse;
+    border-bottom: 1px solid black
+}
+
+.cart-table-header{
+    font-weight: bold;
+    height: 40px;
+    border-bottom: 1px solid black;
+    display:grid;
+    grid-template-columns: 30px 24.375% 24.375% 24.375% 24.375%
+}
+
+#price-column{
+    text-align: right;
+}
+
+.cart-table-row{
+    display: grid;
+    grid-template-columns: 30px 24.375% 24.375% 24.375% 24.375%;
+    margin-top: 20px;
+    margin-bottom:20px;
+}
+
+.cart-table-row button{
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    border-style: none;
+    background-color: #dddddd;
+    align-items: center;
+    padding: 1px 0px 0px 0px;
+}
+
+.cart-table-row button:hover{
+    background-color: #bbbbbb;
+}
+
+.cart-table-row a{
+    text-decoration: none;
+    color:#14597f;
+}
+
+.cart-table-row a:visited{
+    text-decoration: none;
+    color:#14597f;
+}
+.select{
+    margin:0px -10px;
+}
+
+.select button{
+    margin:0px 10px;
+}
+
+#sum{
+    text-align: end;
+    padding-top: 16px;
+    margin-top: 0px;
+}
+
+.order-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+/* Order page */
+#order-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.order-grid{
+    display: grid;
+    grid-template-columns: 48.667% 48.667%;
+    column-gap: 16px; 
+}
+
+.order-grid-col1 {
+    grid-column: 1;
+}
+  
+.order-grid-col2 {
+    grid-column: 2;
+}
+  
+.order-grid-row1 {
+    margin: 24px 0px 8px;
+}
+  
+.order-grid-row2 {
+    grid-row: 2;
+    margin: 16px 0px 4px;
+}
+
+.order-grid-row3 {
+    grid-row: 3;
+}
+  
+.order-grid-row4 {
+    grid-row: 4;
+    margin: 16px 0px 4px;
+}
+  
+.order-grid-row5 {
+    grid-row: 5;
+}
+
+.form-box {
+    border: 1px solid  #999999;
+    border-radius: 4px;
+    padding: 10px 10px;
+}
+
+.order-grid placeholder{
+    margin: 0px 10px 0px 0px;
+}
+
+#order-form .btn{
+    align-self: flex-end;
+    margin: 10px 20px;
+}
