--- a/tp2/OnlineShop/assets/css/style.css
+++ b/tp2/OnlineShop/assets/css/style.css
@@ -8,8 +8,8 @@ main{
     padding-left: 20px;
     padding-right: 20px;
     color: black;
-    margin: 30px auto 0 auto;
-    min-height: calc(100vh - 162px);
+    margin: 30px auto 30px auto;
+    min-height: calc(100vh - 190px);
 }
 header{
     height: 60px;
@@ -98,6 +98,7 @@ footer{
     margin: auto;
     justify-content: center;
     align-items: center;
+    margin:0px;
 }
 
 footer > div {
@@ -133,11 +134,15 @@ footer > div {
     width: 25%;
     float:left;
     box-sizing: border-box;
-    padding: 15px;
+    padding: 0px 15px 15px 15px ;
 }
 #main_panel{
     width:75%;
     float: right;
+}
+
+#categories h4{
+    margin: 0px 0px 18px 0px
 }
 
 #lateral_bar button {
@@ -169,10 +174,7 @@ footer > div {
 #productslist{
     clear: both;
     display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: space-between;
-    align-content: space-between;
-    
+    grid-template-columns: 33.33% 33.33% 33.33%;
 }
 
 #lateral_bar button:not(.selected) {
@@ -191,12 +193,18 @@ footer > div {
 }
 /*panneau central*/
 #productslist article {
-    margin: 15px;
+    margin: 10px;
+    grid-template-rows: 15% 70% 15%;
+    display: grid;
+    justify-content: space-evenly;
+    padding: 10px;
 }
-#productslist article img {
+
+#productslist img {
     max-width: 100%;
-    max-height: 100%;
+    display: inline;
 }
+
 #productslist article * {
     text-decoration: none;
     color: black;   
@@ -210,9 +218,19 @@ footer > div {
     float: left;
 }
 .product_price {
-    padding: 5px;
+    padding: 20px 0px 0px 0px;
     text-align: right;
+    margin:0px;
 }
+#productslist h4{
+    margin:0px;
+    padding: 0px 0px 20px 0px; 
+}
+ #product-listing-row{
+     grid-template-columns: 50% 50%;
+     margin: 0px 5px 0px 5px;
+ }
+
 /*page d'un produit*/
 
 .table {
