--- a/tp4/OnlineShop/views/pages/contact.ejs
+++ b/tp4/OnlineShop/views/pages/contact.ejs
@@ -28,9 +28,6 @@
     </article>
   </main>
   <%- include('../templates/footer')-%>
-  <script type="module">
-    import { initShoppingCartController } from "./assets/scripts/shopping-cart.controller.js";
-    initShoppingCartController();
-  </script>
+  <%- include('../templates/scripts/scripts')-%>
 </body>
 </html>
