--- a/tp4/OnlineShop/views/pages/product.ejs
+++ b/tp4/OnlineShop/views/pages/product.ejs
@@ -7,12 +7,7 @@
     <%- include('../templates/article')-%>
   </main>
   <%- include('../templates/footer')-%>
-
-  <script type="module">
-    import { initShoppingCartController } from "./assets/scripts/shopping-cart.controller.js";
-    import { initProductController } from "./assets/scripts/products.controller.js"
-    initShoppingCartController();
-    initProductController();
-  </script>
+  <%- include('../templates/scripts/scripts')-%>
+  <%- include('../templates/scripts/order')-%>
 </body>
 </html>
