--- a/tp4/OnlineShop/views/pages/products.ejs
+++ b/tp4/OnlineShop/views/pages/products.ejs
@@ -34,11 +34,11 @@
     </article>
   </main>
   <%- include('../templates/footer')-%>
+  <%- include('../templates/scripts/scripts')-%>
+  <%- include('../templates/scripts/order')-%>
   <script type="module">
-    import { initShoppingCartController } from "./assets/scripts/shopping-cart.controller.js";
-    import { initProductController } from "./assets/scripts/products.controller.js"
-    initShoppingCartController();
-    initProductController();
+    import { initProductControler } from "./assets/scripts/products.controller.js";
+    initProductControler();
   </script>
 </body>
 </html>
