--- a/tp4/OnlineShop/views/pages/shopping-cart.ejs
+++ b/tp4/OnlineShop/views/pages/shopping-cart.ejs
@@ -27,11 +27,7 @@
     </article>
   </main>
   <%- include('../templates/footer')-%>
-  <script type="module">
-    import { initShoppingCartController } from "./assets/scripts/shopping-cart.controller.js";
-    import { initProductController } from "./assets/scripts/products.controller.js"
-    initShoppingCartController();
-    initProductController();
-  </script>
+  <%- include('../templates/scripts/scripts')-%>
+  <%- include('../templates/scripts/order')-%>
 </body>
 </html>
