--- a/tp4/OnlineShop/views/pages/product.ejs
+++ b/tp4/OnlineShop/views/pages/product.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('../templates/head')-%>
+  <%- include('../templates/head', {title: title})-%>
 <body>
   <%- include('../templates/header')-%>
   <main>
