--- a/tp4/OnlineShop/views/pages/products.ejs
+++ b/tp4/OnlineShop/views/pages/products.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('../templates/head')-%>
+  <%- include('../templates/head', {titre: titre})-%>
 <body>
   <%- include('../templates/header')-%>
   <main>
@@ -29,7 +29,10 @@
       <span class="right-header" id="products-count">13 produits</span>
       <h1>Produits</h1>
       <div class="products" id="products-list">
-        <div class="loading"></div>
+        <!--<div class="loading"></div>-->
+        <% cart.forEach(function(c){ %>
+          <%- include('../templates/products', {user: c}); %>
+        <% }); %>
       </div>
     </article>
   </main>
