--- a/tp4/OnlineShop/views/pages/product.ejs
+++ b/tp4/OnlineShop/views/pages/product.ejs
@@ -4,7 +4,43 @@
 <body>
   <%- include('../templates/header')-%>
   <main>
-    <%- include('../templates/article')-%>
+    <article>
+      <h1 id="product-name">Produit</h1>
+      <div class="row">
+        <div class="col">
+          <img alt="product" src="<%= produit.img %>" id="product-image">
+        </div>
+        <div class="col">
+          <section>
+            <h2>Description</h2>
+            <p id="product-desc">
+              {{produit.description}}
+            </p>
+          </section>
+          <section>
+            <h2>Caractéristiques</h2>
+            <ul id="product-features">
+              <% for(var i = 0; i < produit.features.length; i++) { %>
+                <li><%= produit.features[i] %></li>
+                <% } %>
+        
+            </ul>
+          </section>
+          <hr>
+          <form class="pull-right" id="add-to-cart-form">
+            <label for="product-quantity">Quantité:</label>
+            <input class="form-control" type="number" value="1" min="1" id="product-quantity">
+            <button class="btn" title="Ajouter au panier" type="submit">
+              <i class="fa fa-cart-plus"></i>&nbsp; Ajouter
+            </button>
+          </form>
+          <p>Prix: <strong id="product-price"></strong></p>
+        </div>
+      </div>
+      <div class="dialog" id="dialog">
+        Le produit a été ajouté au panier.
+      </div>
+    </article>
   </main>
   <%- include('../templates/footer')-%>
   <%- include('../templates/scripts/scripts')-%>
