--- a/tp4/OnlineShop/views/pages/products.ejs
+++ b/tp4/OnlineShop/views/pages/products.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('../templates/head', {titre: titre})-%>
+  <%- include('../templates/head', {title: title})-%>
 <body>
   <%- include('../templates/header')-%>
   <main>
@@ -30,8 +30,9 @@
       <h1>Produits</h1>
       <div class="products" id="products-list">
         <!--<div class="loading"></div>-->
-        <% cart.forEach(function(c){ %>
-          <%- include('../templates/products', {user: c}); %>
+        <%console.dir(products);%>
+        <% products.forEach(function(product){ %>
+          <%- include('../templates/article', {product:product})-%>
         <% }); %>
       </div>
     </article>
