--- a/tp4/OnlineShop/views/pages/products.ejs
+++ b/tp4/OnlineShop/views/pages/products.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('../templates/head', {title: title})-%>
+  <%- include('../templates/head', {title: title, num: num})-%>
 <body>
   <%- include('../templates/header')-%>
   <main>
@@ -26,7 +26,7 @@
       </section>
     </section>
     <article>
-      <span class="right-header" id="products-count">13 produits</span>
+      <span class="right-header" id="products-count"><%= products.length %> produits</span>
       <h1>Produits</h1>
       <div class="products" id="products-list">
         <!--<div class="loading"></div>-->
