--- a/tp4/OnlineShop/views/templates/header.ejs
+++ b/tp4/OnlineShop/views/templates/header.ejs
@@ -16,7 +16,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-              <span class="count">{{cart.length}}</span>
+              <span class="count"><%= num%></span>
             </a>
           </li>
         </ul>
