fait fonctionner produit

--- a/tp4/OnlineShop/views/pages/index.ejs
+++ b/tp4/OnlineShop/views/pages/index.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
 <%- include('../templates/head', {title: title, num: num})-%>
 <body>
-  <%- include('../templates/header')-%>
+  <%- include('../templates/header', { num: num})-%>
   <main>
     <article>
       <img alt="home" src="/assets/img/home.png" id="home-img">
