--- a/tp4/OnlineShop/views/pages/confirmation.ejs
+++ b/tp4/OnlineShop/views/pages/confirmation.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('../templates/head', {title: title, num: num})-%>
+  <%- include('../templates/head', {title: title})-%>
 <body>
-  <%- include('../templates/header')-%>
+  <%- include('../templates/header', {num: num})-%>
   <main>
     <article>
       <h1>Votre commande est confirmée <span id="name"></span>!</h1>
