--- a/tp4/OnlineShop/views/pages/order.ejs
+++ b/tp4/OnlineShop/views/pages/order.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('../templates/head', {title: title}, num: num)-%>
+  <%- include('../templates/head', {title: title})-%>
 <body>
-  <%- include('../templates/header')-%>
+  <%- include('../templates/header', {num: num})-%>
   <main>
     <article>
       <h1>Commande</h1>
