--- a/tp4/OnlineShop/views/pages/products.ejs
+++ b/tp4/OnlineShop/views/pages/products.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('../templates/head', {title: title, num: num})-%>
+  <%- include('../templates/head', {title: title})-%>
 <body>
-  <%- include('../templates/header')-%>
+  <%- include('../templates/header', {num: num})-%>
   <main>
     <section class="sidebar" aria-label="Filtres">
       <section>
@@ -30,7 +30,6 @@
       <h1>Produits</h1>
       <div class="products" id="products-list">
         <!--<div class="loading"></div>-->
-        <%console.dir(products);%>
         <% products.forEach(function(product){ %>
           <%- include('../templates/article', {product:product})-%>
         <% }); %>
