--- a/tp4/OnlineShop/views/pages/order.ejs
+++ b/tp4/OnlineShop/views/pages/order.ejs
@@ -55,7 +55,7 @@
             </div>
           </div>
         </section>
-        <button class="btn pull-right" type="submit">Payer <i class="fa fa-angle-double-right"></i></button>
+        <button class="btn pull-right" type="submit" href="/confirmation">Payer <i class="fa fa-angle-double-right"></i></button>
       </form>
     </article>
   </main>
