regler le bouton dajout au panier

--- a/tp4/OnlineShop/views/pages/order.ejs
+++ b/tp4/OnlineShop/views/pages/order.ejs
@@ -6,7 +6,7 @@
   <main>
     <article>
       <h1>Commande</h1>
-      <form id="order-form" action="./confirmation.html" method="post">
+      <form id="order-form" action="./confirmation" method="post">
         <section>
           <h2>Contact</h2>
           <div class="row">
@@ -62,10 +62,10 @@
   <%- include('../templates/footer')-%>
   <%- include('../templates/scripts/scripts')-%>
   <%- include('../templates/scripts/order')-%>
-  <script type="text/javascript"> src="./assets/js/jquery.validate.min.js"</script>
-  <script type="text/javascript"> src="./assets/js/additional-methods.min.js"</script>
-  <script type="text/javascript"> src="./assets/js/messages_fr.js"</script>
-  <script type="module"> src="./assets/scripts/orders.service.js"</script>
-  <script type="module"> src="./assets/scripts/order.controller.js"</script>
+  <script type="text/javascript"> src="/assets/js/jquery.validate.min.js"</script>
+  <script type="text/javascript"> src="/assets/js/additional-methods.min.js"</script>
+  <script type="text/javascript"> src="/assets/js/messages_fr.js"</script>
+  <script type="module"> src="/assets/scripts/orders.service.js"</script>
+  <script type="module"> src="/assets/scripts/order.controller.js"</script>
 </body>
 </html>
