--- a/tp4/OnlineShop/views/templates/scripts/order.ejs
+++ b/tp4/OnlineShop/views/templates/scripts/order.ejs
@@ -1,4 +1,4 @@
 <script type="module">
-    import { initOrderController } from "./assets/scripts/order.controller.js"
+    import { initOrderController } from "/assets/scripts/order.controller.js"
     initOrderController();
   </script>
