--- a/tp4/OnlineShop/views/pages/product.ejs
+++ b/tp4/OnlineShop/views/pages/product.ejs
@@ -37,9 +37,9 @@
           <p>Prix: <strong id="product-price"><%= product.price%></strong></p>
         </div>
       </div>
-      <!--<div class="dialog" id="dialog">
+      <div class="dialog" id="dialog">
         Le produit a été ajouté au panier.
-      </div>-->
+      </div>
     </article>
   </main>
   <%- include('../templates/footer')-%>
