--- a/tp4/OnlineShop/views/pages/confirmation.ejs
+++ b/tp4/OnlineShop/views/pages/confirmation.ejs
@@ -5,8 +5,8 @@
   <%- include('../templates/header', {num: num})-%>
   <main>
     <article>
-      <h1>Votre commande est confirmée <span id="name"></span>!</h1>
-      <p>Votre numéro de confirmation est le <strong id="confirmation-number"></strong>.</p>
+      <h1>Votre commande est confirmée <span id="name"><%- name %> </span>!</h1>
+      <p>Votre numéro de confirmation est le <strong id="confirmation-number"><%- id %></strong>.</p>
     </article>
   </main>
   <%- include('../templates/footer')-%>
