--- a/tp4/OnlineShop/views/pages/products.ejs
+++ b/tp4/OnlineShop/views/pages/products.ejs
@@ -29,7 +29,7 @@
       <span class="right-header" id="products-count"><%= products.length %> produits</span>
       <h1>Produits</h1>
       <div class="products" id="products-list">
-        <div class="loading"></div>
+        <!--<div class="loading"></div>-->
         <% products.forEach(function(product){ %>
           <%- include('../templates/article', {product:product})-%>
         <% }); %>
