fait marcher le maudit panier frontend

--- a/tp4/OnlineShop/views/pages/index.ejs
+++ b/tp4/OnlineShop/views/pages/index.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
-<%- include('../templates/head', {title: title, num: num})-%>
+<%- include('../templates/head', {title: title})-%>
 <body>
-  <%- include('../templates/header', { num: num})-%>
+  <%- include('../templates/header', {cart: cart})-%>
   <main>
     <article>
       <img alt="home" src="/assets/img/home.png" id="home-img">
