--- a/tp4/OnlineShop/views/pages/order.ejs
+++ b/tp4/OnlineShop/views/pages/order.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
   <%- include('../templates/head', {title: title})-%>
 <body>
-  <%- include('../templates/header', {num: num})-%>
+  <%- include('../templates/header', {cart: cart})-%>
   <main>
     <article>
       <h1>Commande</h1>
