--- a/tp4/OnlineShop/views/pages/product.ejs
+++ b/tp4/OnlineShop/views/pages/product.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
   <%- include('../templates/head', {title: title})-%>
 <body>
-  <%- include('../templates/header', {num: num})-%>
+  <%- include('../templates/header', {cart: cart})-%>
   <main>
     <article>
       <h1 id="product-name">Produit</h1>
@@ -27,10 +27,10 @@
             </ul>
           </section>
           <hr>
-          <form class="pull-right" id="add-to-cart-form" >
+          <form class="pull-right" id="add-to-cart-form" data-product-id="<%= product.id %>">
             <label for="product-quantity">Quantité:</label>
             <input class="form-control" type="number" value="1" min="1" id="product-quantity">
-            <button class="btn" title="Ajouter au panier" type="submit" data-product-id="<%= product.id %>">
+            <button class="btn" title="Ajouter au panier" type="submit" >
               <i class="fa fa-cart-plus"></i>&nbsp; Ajouter
             </button>
           </form>
