--- a/tp4/OnlineShop/views/pages/products.ejs
+++ b/tp4/OnlineShop/views/pages/products.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
   <%- include('../templates/head', {title: title})-%>
 <body>
-  <%- include('../templates/header', {num: num})-%>
+  <%- include('../templates/header', {cart: cart})-%>
   <main>
     <section class="sidebar" aria-label="Filtres">
       <section>
