--- a/tp4/OnlineShop/views/templates/article.ejs
+++ b/tp4/OnlineShop/views/templates/article.ejs
@@ -1,7 +1,7 @@
 <div class="product" data-product-id="<%= product.id %>">
     <a href="./produits/<%= product.id %>" title="En savoir plus...">
     <h2><%= product.name %></h2>
-    <img alt="product" src="./assets/img/<%= product.image %>">
+    <img alt="product" src="/assets/img/<%= product.image %>">
     <p class="price"><small>Prix</small> <%= product.price %> $</p>
     </a>
 </div>
